<resources>
    <string name="app_name">DocuCare v1.3</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Notes -->
    <string name="medical_hx"></string>
    <string name="medications"></string>
    <string name="allergies"></string>
    <string name="cancer_screening_hx"></string>
    <string name="surgical_hx"></string>
    <string name="family_hx"></string>
    <string name="social_hx"></string>
    <string name="advanced_care"></string>
</resources>