<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/docucare_logo_background">


    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar_main"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_note"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center|bottom"
        android:text="Notes"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/homebutton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/homebutton"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="end|bottom"
        android:contentDescription="A tiny return arrow"
        android:text="←"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="60dp"
        android:fillViewport="true"
        android:scrollbarStyle="insideOverlay">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TextView
                android:id="@+id/text_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:gravity="top"
                android:includeFontPadding="false"
                android:textSize="0sp"
                app:layout_constraintBottom_toTopOf="@+id/text_medical_history_title"
                app:layout_constraintEnd_toStartOf="@+id/text_medical_history_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_medical_history_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:includeFontPadding="false"
                android:text="Medical History"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_medical_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:gravity="start"
                android:includeFontPadding="false"
                android:minHeight="50sp"
                android:text="@string/medical_hx"
                android:textColorHint="?attr/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_medical_history_title" />

            <TextView
                android:id="@+id/text_medications_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:includeFontPadding="false"
                android:text="Medications"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_medical_history" />

            <TextView
                android:id="@+id/text_medications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:gravity="start"
                android:includeFontPadding="false"
                android:minHeight="50sp"
                android:text="@string/medications"
                android:textColorHint="?attr/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_medications_title" />

            <TextView
                android:id="@+id/text_allergies_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:includeFontPadding="false"
                android:text="Allergies"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_medications" />

            <TextView
                android:id="@+id/text_allergies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:gravity="start"
                android:includeFontPadding="false"
                android:minHeight="50sp"
                android:text="@string/allergies"
                android:textColorHint="?attr/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_allergies_title" />

            <TextView
                android:id="@+id/text_cancer_screening_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:includeFontPadding="false"
                android:text="Cancer Screening History"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_allergies" />

            <TextView
                android:id="@+id/text_cancer_screening"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:gravity="start"
                android:includeFontPadding="false"
                android:minHeight="50sp"
                android:text="@string/cancer_screening_hx"
                android:textColorHint="?attr/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_cancer_screening_title" />

            <TextView
                android:id="@+id/text_surgical_history_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:includeFontPadding="false"
                android:text="Surgical History"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_cancer_screening" />

            <TextView
                android:id="@+id/text_surgical_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:gravity="start"
                android:includeFontPadding="false"
                android:minHeight="50sp"
                android:text="@string/surgical_hx"
                android:textColorHint="?attr/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_surgical_history_title" />

            <TextView
                android:id="@+id/text_family_history_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:includeFontPadding="false"
                android:text="Family History"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_surgical_history" />

            <TextView
                android:id="@+id/text_family_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:gravity="start"
                android:includeFontPadding="false"
                android:minHeight="50sp"
                android:text="@string/family_hx"
                android:textColorHint="?attr/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_family_history_title" />

            <TextView
                android:id="@+id/text_social_history_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:includeFontPadding="false"
                android:text="Social History"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_family_history" />

            <TextView
                android:id="@+id/text_social_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:gravity="start"
                android:includeFontPadding="false"
                android:minHeight="50sp"
                android:text="@string/social_hx"
                android:textColorHint="?attr/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_social_history_title" />

            <TextView
                android:id="@+id/text_advanced_care_planning_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:includeFontPadding="false"
                android:text="Advanced Care Planning"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_social_history" />

            <TextView
                android:id="@+id/text_advanced_care_planning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:gravity="start"
                android:includeFontPadding="false"
                android:minHeight="50sp"
                android:text="@string/advanced_care"
                android:textColorHint="?attr/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_advanced_care_planning_title" />

        </TableLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>